@@ -67,7 +67,7 @@ router_urls += format_suffix_patterns([
             views_product.ProductViewSet.as_view({'get': 'preview_modellist'}),
             name='product-model-list'),
         url(r'^products/(?P<pk>[0-9]+)/snapshot$',
-            views_product.ProductSnapshotView.as_view(),
+            views_product.ProductShareView.as_view(),
             name='product-snapshot'),
         url(r'^trades/(?P<pk>[0-9]+)/orders$',
             views_trade.SaleOrderViewSet.as_view({'get': 'list'}),
